# swagger/swagger.yml
@@ -1090,6 +1090,77 @@ paths:
           description: Not Found
       tags:
         - OperationsList
+  '/v2/data/{platform}/{network}/double_bakings':
+    get:
+      operationId: getDoubleBakingsList
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: platform
+          description: Not used
+          required: true
+          type: string
+        - in: path
+          name: network
+          description: Not used
+          required: true
+          type: string
+        - in: query
+          name: limit
+          type: integer
+          default: 20
+          minimum: 1
+          maximum: 500
+        - in: query
+          name: offset
+          description: Offset
+          type: integer
+          default: 0
+          minimum: 0
+        - collectionFormat: multi
+          in: query
+          items:
+            type: string
+          name: block_id
+          type: array
+        - collectionFormat: multi
+          in: query
+          items:
+            type: integer
+          name: block_level
+          description: Not used
+          type: array
+        - collectionFormat: multi
+          in: query
+          items:
+            type: string
+          name: operation_id
+          description: Operation hash
+          type: array
+        - collectionFormat: multi
+          in: query
+          items:
+            type: string
+          name: account_id
+          type: array
+      responses:
+        '200':
+          description: Query compatibility endpoint for operations
+          schema:
+            items:
+              $ref: '#/definitions/OperationsRow'
+            type: array
+          headers:
+            X-Total-Count:
+              description: The total number of data entries.
+              type: integer
+        '400':
+          description: Bad request
+        '404':
+          description: Not Found
+      tags:
+        - OperationsList
   '/v2/data/{platform}/{network}/operations/avgFees':
     get:
       operationId: getAvgFees
@@ -1473,6 +1544,30 @@ definitions:
       - branch
       - blockId
     type: object
+  DoubleBakingDetails:
+    properties:
+      denounced_level:
+        type: integer
+        format: int64
+      offender:
+        type: string
+      priority:
+        type: integer
+        format: int64
+      evidence_baker:
+        type: string
+      baker_reward:
+        type: integer
+        format: int64
+      lost_deposits:
+        type: integer
+        format: int64
+      lost_rewards:
+        type: integer
+        format: int64
+      lost_fees:
+        type: integer
+        format: int64
   OperationsRow:
     properties:
       parameters:
@@ -1552,6 +1647,8 @@ definitions:
       timestamp:
         format: int64
         type: integer
+      doubleBake:
+        $ref: '#/definitions/DoubleBakingDetails'
     required:
       - blockHash
       - timestamp
